# OpenCorpInsight-MCP

./: Dockerfile  PACKAGING.md  README.md  chat.html  docker-compose.yml  env.example  main_server.py  mcp_config.json  mcp_dashboard_css.css  mcp_dashboard_js.js  pyproject.toml  requirements.txt  test.html
cache/: dart_cache.db
docs/: mcp_architecture.md  tool_specifications.md
scripts/: dev_test.py  install.sh  run_mcp_server.py  run_tests.sh  start_server.sh  test_sinsegae_2025.py
src/: benchmark_analyzer.py  cache_manager.py  dart_mcp_server.py  dart_mcp_server_backup.py  dart_mcp_server_clean.py  news_analyzer.py  portfolio_analyzer.py  report_generator.py  time_series_analyzer.py
tests/: test_dart_mcp_server.py
